src/qt/libqgraphicssceneevent.bf

	
	public void SetPos(void* pos)
	{
		CQt.QGraphicsSceneWheelEvent_SetPos(this.nativePtr, pos);
	}
	
	public void ScenePos()
	{
		CQt.QGraphicsSceneWheelEvent_ScenePos(this.nativePtr);
	}
	
	public void SetScenePos(void* pos)
	{
		CQt.QGraphicsSceneWheelEvent_SetScenePos(this.nativePtr, pos);
	}
	
	public void ScreenPos()
	{
		CQt.QGraphicsSceneWheelEvent_ScreenPos(this.nativePtr);
	}
	
	public void SetScreenPos(void* pos)
	{
		CQt.QGraphicsSceneWheelEvent_SetScreenPos(this.nativePtr, pos);
	}
	
	public int64 Buttons()
	{
		return CQt.QGraphicsSceneWheelEvent_Buttons(this.nativePtr);
	}
	
	public void SetButtons(int64 buttons)
	{
		CQt.QGraphicsSceneWheelEvent_SetButtons(this.nativePtr, buttons);
	}
	
	public int64 Modifiers()
	{
		return CQt.QGraphicsSceneWheelEvent_Modifiers(this.nativePtr);
	}
	
	public void SetModifiers(int64 modifiers)
	{
		CQt.QGraphicsSceneWheelEvent_SetModifiers(this.nativePtr, modifiers);
	}
	
	public int32 Delta()
	{
		return CQt.QGraphicsSceneWheelEvent_Delta(this.nativePtr);
	}
	
	public void SetDelta(int32 delta)
	{
		CQt.QGraphicsSceneWheelEvent_SetDelta(this.nativePtr, delta);
	}
	
	public int64 Orientation()
	{
		return CQt.QGraphicsSceneWheelEvent_Orientation(this.nativePtr);
	}
	
	public void SetOrientation(int64 orientation)
	{
		CQt.QGraphicsSceneWheelEvent_SetOrientation(this.nativePtr, orientation);
	}
	
	public int64 Phase()
	{
		return CQt.QGraphicsSceneWheelEvent_Phase(this.nativePtr);
	}
	
	public void SetPhase(int64 scrollPhase)
	{
		CQt.QGraphicsSceneWheelEvent_SetPhase(this.nativePtr, scrollPhase);
	}
	
	public void PixelDelta()
	{
		CQt.QGraphicsSceneWheelEvent_PixelDelta(this.nativePtr);
	}
	
	public void SetPixelDelta(void delta)
	{
		CQt.QGraphicsSceneWheelEvent_SetPixelDelta(this.nativePtr, delta);
	}
	
	public bool IsInverted()
	{
		return CQt.QGraphicsSceneWheelEvent_IsInverted(this.nativePtr);
	}
	
	public void SetInverted(bool inverted)
	{
		CQt.QGraphicsSceneWheelEvent_SetInverted(this.nativePtr, inverted);
	}
	
	public void* Widget()
	{
		return CQt.QGraphicsSceneEvent_Widget(this.nativePtr);
	}
	
	public void SetWidget(void* widget)
	{
		CQt.QGraphicsSceneEvent_SetWidget(this.nativePtr, widget);
	}
	
	public uint64 Timestamp()
	{
		return CQt.QGraphicsSceneEvent_Timestamp(this.nativePtr);
	}
	
	public void SetTimestamp(uint64 ts)
	{
		CQt.QGraphicsSceneEvent_SetTimestamp(this.nativePtr, ts);
	}
	
	public int64 Type()
	{
		return CQt.QEvent_Type(this.nativePtr);
	}
	
	public bool Spontaneous()
	{
		return CQt.QEvent_Spontaneous(this.nativePtr);
	}
	
	public virtual void SetAccepted(bool accepted)
	{
		CQt.QEvent_SetAccepted(this.nativePtr, accepted);
	}
	
	public bool IsAccepted()
	{
		return CQt.QEvent_IsAccepted(this.nativePtr);
	}
	
	public void Accept()
	{
		CQt.QEvent_Accept(this.nativePtr);
	}
	
	public void Ignore()
	{
		CQt.QEvent_Ignore(this.nativePtr);
	}
	
	public bool IsInputEvent()
	{
		return CQt.QEvent_IsInputEvent(this.nativePtr);
	}
	
	public bool IsPointerEvent()
	{
		return CQt.QEvent_IsPointerEvent(this.nativePtr);
	}
	
	public bool IsSinglePointEvent()
	{
		return CQt.QEvent_IsSinglePointEvent(this.nativePtr);
	}
	
	public static int32 RegisterEventType()
	{
		return CQt.QEvent_RegisterEventType();
	}
	
	public virtual void* Clone()
	{
		return CQt.QEvent_Clone(this.nativePtr);
	}
	
	public static int32 RegisterEventType1(int32 hint)
	{
		return CQt.QEvent_RegisterEventType1(hint);
	}
	
}
extension CQt
{
	[LinkName("QGraphicsSceneWheelEvent_new")]
	public static extern void* QGraphicsSceneWheelEvent_new();
	[LinkName("QGraphicsSceneWheelEvent_new2")]
	public static extern void* QGraphicsSceneWheelEvent_new2(int64 typeVal);
	[LinkName("QGraphicsSceneWheelEvent_Pos")]
	public static extern void QGraphicsSceneWheelEvent_Pos(void* c_this);
	[LinkName("QGraphicsSceneWheelEvent_SetPos")]
	public static extern void QGraphicsSceneWheelEvent_SetPos(void* c_this, void* pos);
	[LinkName("QGraphicsSceneWheelEvent_ScenePos")]
	public static extern void QGraphicsSceneWheelEvent_ScenePos(void* c_this);
	[LinkName("QGraphicsSceneWheelEvent_SetScenePos")]
	public static extern void QGraphicsSceneWheelEvent_SetScenePos(void* c_this, void* pos);
	[LinkName("QGraphicsSceneWheelEvent_ScreenPos")]
	public static extern void QGraphicsSceneWheelEvent_ScreenPos(void* c_this);
	[LinkName("QGraphicsSceneWheelEvent_SetScreenPos")]
	public static extern void QGraphicsSceneWheelEvent_SetScreenPos(void* c_this, void* pos);
	[LinkName("QGraphicsSceneWheelEvent_Buttons")]
	public static extern int64 QGraphicsSceneWheelEvent_Buttons(void* c_this);
	[LinkName("QGraphicsSceneWheelEvent_SetButtons")]
	public static extern void QGraphicsSceneWheelEvent_SetButtons(void* c_this, int64 buttons);
	[LinkName("QGraphicsSceneWheelEvent_Modifiers")]
	public static extern int64 QGraphicsSceneWheelEvent_Modifiers(void* c_this);
	[LinkName("QGraphicsSceneWheelEvent_SetModifiers")]
	public static extern void QGraphicsSceneWheelEvent_SetModifiers(void* c_this, int64 modifiers);
	[LinkName("QGraphicsSceneWheelEvent_Delta")]
	public static extern int32 QGraphicsSceneWheelEvent_Delta(void* c_this);
	[LinkName("QGraphicsSceneWheelEvent_SetDelta")]
	public static extern void QGraphicsSceneWheelEvent_SetDelta(void* c_this, int32 delta);
	[LinkName("QGraphicsSceneWheelEvent_Orientation")]
	public static extern int64 QGraphicsSceneWheelEvent_Orientation(void* c_this);
	[LinkName("QGraphicsSceneWheelEvent_SetOrientation")]
	public static extern void QGraphicsSceneWheelEvent_SetOrientation(void* c_this, int64 orientation);
	[LinkName("QGraphicsSceneWheelEvent_Phase")]
	public static extern int64 QGraphicsSceneWheelEvent_Phase(void* c_this);
	[LinkName("QGraphicsSceneWheelEvent_SetPhase")]
	public static extern void QGraphicsSceneWheelEvent_SetPhase(void* c_this, int64 scrollPhase);
	[LinkName("QGraphicsSceneWheelEvent_PixelDelta")]
	public static extern void QGraphicsSceneWheelEvent_PixelDelta(void* c_this);
	[LinkName("QGraphicsSceneWheelEvent_SetPixelDelta")]
	public static extern void QGraphicsSceneWheelEvent_SetPixelDelta(void* c_this, void delta);
	[LinkName("QGraphicsSceneWheelEvent_IsInverted")]
	public static extern bool QGraphicsSceneWheelEvent_IsInverted(void* c_this);
	[LinkName("QGraphicsSceneWheelEvent_SetInverted")]
	public static extern void QGraphicsSceneWheelEvent_SetInverted(void* c_this, bool inverted);
	/// Delete this object from C++ memory
	[LinkName("QGraphicsSceneWheelEvent_Delete")]
	public static extern void QGraphicsSceneWheelEvent_Delete(void* self);
}
public class QGraphicsSceneContextMenuEvent
{
	protected void* nativePtr;
	
	public this()
	{
		this.nativePtr = CQt.QGraphicsSceneContextMenuEvent_new();
	}
	
	public ~this()
	{
		CQt.QGraphicsSceneContextMenuEvent_Delete(this.nativePtr);
	}
	
	public void Pos()
	{
		CQt.QGraphicsSceneContextMenuEvent_Pos(this.nativePtr);
	}
	
	public void SetPos(void* pos)
	{
		CQt.QGraphicsSceneContextMenuEvent_SetPos(this.nativePtr, pos);
	}
	
	public void ScenePos()
	{
		CQt.QGraphicsSceneContextMenuEvent_ScenePos(this.nativePtr);
	}
	
	public void SetScenePos(void* pos)
	{
		CQt.QGraphicsSceneContextMenuEvent_SetScenePos(this.nativePtr, pos);
	}
	
	public void ScreenPos()
	{
		CQt.QGraphicsSceneContextMenuEvent_ScreenPos(this.nativePtr);
	}
	
	public void SetScreenPos(void* pos)
	{
		CQt.QGraphicsSceneContextMenuEvent_SetScreenPos(this.nativePtr, pos);
	}
	
	public int64 Modifiers()
	{
		return CQt.QGraphicsSceneContextMenuEvent_Modifiers(this.nativePtr);
	}
	
	public void SetModifiers(int64 modifiers)
	{
		CQt.QGraphicsSceneContextMenuEvent_SetModifiers(this.nativePtr, modifiers);
	}
	
	public int64 Reason()
	{
		return CQt.QGraphicsSceneContextMenuEvent_Reason(this.nativePtr);
	}
	
	public void SetReason(int64 reason)
	{
		CQt.QGraphicsSceneContextMenuEvent_SetReason(this.nativePtr, reason);
	}
	
	public void* Widget()
	{
		return CQt.QGraphicsSceneEvent_Widget(this.nativePtr);
	}
	
	public void SetWidget(void* widget)
	{
		CQt.QGraphicsSceneEvent_SetWidget(this.nativePtr, widget);
	}
	
	public uint64 Timestamp()
	{
		return CQt.QGraphicsSceneEvent_Timestamp(this.nativePtr);
	}
	
	public void SetTimestamp(uint64 ts)
	{
		CQt.QGraphicsSceneEvent_SetTimestamp(this.nativePtr, ts);
	}
	
	public int64 Type()
	{
		return CQt.QEvent_Type(this.nativePtr);
	}
	
	public bool Spontaneous()
	{
		return CQt.QEvent_Spontaneous(this.nativePtr);
	}
	
	public virtual void SetAccepted(bool accepted)
	{
		CQt.QEvent_SetAccepted(this.nativePtr, accepted);
	}
	
	public bool IsAccepted()
	{
		return CQt.QEvent_IsAccepted(this.nativePtr);
	}
	
	public void Accept()
	{
		CQt.QEvent_Accept(this.nativePtr);
	}
	
	public void Ignore()
	{
		CQt.QEvent_Ignore(this.nativePtr);
	}
	
	public bool IsInputEvent()
	{
		return CQt.QEvent_IsInputEvent(this.nativePtr);
	}
	
	public bool IsPointerEvent()
	{
		return CQt.QEvent_IsPointerEvent(this.nativePtr);
	}
	
	public bool IsSinglePointEvent()
	{
		return CQt.QEvent_IsSinglePointEvent(this.nativePtr);
	}
	
	public static int32 RegisterEventType()
	{
		return CQt.QEvent_RegisterEventType();
	}
	
	public virtual void* Clone()
	{
		return CQt.QEvent_Clone(this.nativePtr);
	}
	
	public static int32 RegisterEventType1(int32 hint)
	{
		return CQt.QEvent_RegisterEventType1(hint);
	}
	
}
extension CQt
{
	[LinkName("QGraphicsSceneContextMenuEvent_new")]
	public static extern void* QGraphicsSceneContextMenuEvent_new();
	[LinkName("QGraphicsSceneContextMenuEvent_new2")]
	public static extern void* QGraphicsSceneContextMenuEvent_new2(int64 typeVal);
	[LinkName("QGraphicsSceneContextMenuEvent_Pos")]
	public static extern void QGraphicsSceneContextMenuEvent_Pos(void* c_this);
	[LinkName("QGraphicsSceneContextMenuEvent_SetPos")]
	public static extern void QGraphicsSceneContextMenuEvent_SetPos(void* c_this, void* pos);
	[LinkName("QGraphicsSceneContextMenuEvent_ScenePos")]
	public static extern void QGraphicsSceneContextMenuEvent_ScenePos(void* c_this);
	[LinkName("QGraphicsSceneContextMenuEvent_SetScenePos")]
	public static extern void QGraphicsSceneContextMenuEvent_SetScenePos(void* c_this, void* pos);
	[LinkName("QGraphicsSceneContextMenuEvent_ScreenPos")]
	public static extern void QGraphicsSceneContextMenuEvent_ScreenPos(void* c_this);
	[LinkName("QGraphicsSceneContextMenuEvent_SetScreenPos")]
	public static extern void QGraphicsSceneContextMenuEvent_SetScreenPos(void* c_this, void* pos);
	[LinkName("QGraphicsSceneContextMenuEvent_Modifiers")]
	public static extern int64 QGraphicsSceneContextMenuEvent_Modifiers(void* c_this);
	[LinkName("QGraphicsSceneContextMenuEvent_SetModifiers")]
	public static extern void QGraphicsSceneContextMenuEvent_SetModifiers(void* c_this, int64 modifiers);
	[LinkName("QGraphicsSceneContextMenuEvent_Reason")]
	public static extern int64 QGraphicsSceneContextMenuEvent_Reason(void* c_this);
	[LinkName("QGraphicsSceneContextMenuEvent_SetReason")]
	public static extern void QGraphicsSceneContextMenuEvent_SetReason(void* c_this, int64 reason);
	/// Delete this object from C++ memory
	[LinkName("QGraphicsSceneContextMenuEvent_Delete")]
	public static extern void QGraphicsSceneContextMenuEvent_Delete(void* self);
}
public class QGraphicsSceneHoverEvent
{
	protected void* nativePtr;
	
	public this()
	{
		this.nativePtr = CQt.QGraphicsSceneHoverEvent_new();
	}
	
	public ~this()
	{
		CQt.QGraphicsSceneHoverEvent_Delete(this.nativePtr);
	}
	
	public void Pos()
	{
		CQt.QGraphicsSceneHoverEvent_Pos(this.nativePtr);
	}
	
	public void SetPos(void* pos)
	{
		CQt.QGraphicsSceneHoverEvent_SetPos(this.nativePtr, pos);
	}
	
	public void ScenePos()
	{
		CQt.QGraphicsSceneHoverEvent_ScenePos(this.nativePtr);
	}
	
	public void SetScenePos(void* pos)
	{
		CQt.QGraphicsSceneHoverEvent_SetScenePos(this.nativePtr, pos);
	}
	
	public void ScreenPos()
	{
		CQt.QGraphicsSceneHoverEvent_ScreenPos(this.nativePtr);
	}
	
	public void SetScreenPos(void* pos)
	{
		CQt.QGraphicsSceneHoverEvent_SetScreenPos(this.nativePtr, pos);
	}
